--- a/client/src/StudentDashboard/components/AvatarContainer/styles.css
+++ b/client/src/StudentDashboard/components/AvatarContainer/styles.css
@@ -19,4 +19,10 @@
 	width: 80%;
 	min-height: 400px;
 	border-radius: 5px;
+
+	max-height: 80vh;
+	overflow-y: scroll;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
 }
