--- a/client/src/StudentDashboard/components/AvatarContainer/styles.css
+++ b/client/src/StudentDashboard/components/AvatarContainer/styles.css
@@ -18,11 +18,14 @@
 	background-color: white;
 	width: 80%;
 	min-height: 400px;
-	border-radius: 5px;
+	border-radius: 9px;
 
-	max-height: 80vh;
+	max-height: 40vh;
 	overflow-y: scroll;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
+
+	position: relative;
+	top: 10px;
 }
