--- a/client/src/StudentDashboard/components/BookCover/styles.css
+++ b/client/src/StudentDashboard/components/BookCover/styles.css
@@ -1,5 +1,12 @@
 .coverImage {
 	width: 100%;
 	height: 100%;
-	box-shadow: -5px 2px 73px 2px rgba(0,0,0,0.55);
+	box-shadow: -5px 2px 73px 2px rgba(0, 0, 0, 0.55);
+
+	user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
