--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -1,4 +1,3 @@
-
 .fullContainer {
 	width: 100%;
 	height: 100%;
@@ -6,14 +5,20 @@
 	flex-flow: row;
 	border: 3px solid #937050;
 	border-radius: 5px;
-	box-shadow: -5px 2px 73px 2px rgba(0,0,0,0.65);
+	box-shadow: -5px 2px 73px 2px rgba(0, 0, 0, 0.65);
 
+	user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 .bookEdge {
 	width: 7px;
 	height: 100%;
-	background-image: url(/images/dashboard/read_edgie.png)
+	background-image: url(/images/dashboard/read_edgie.png);
 }
 
 .readerContentContainer {
@@ -35,7 +40,7 @@
 .wideReaderImage {
 	width: 100%;
 	height: 75%;
-	margin-top: -30px
+	margin-top: -30px;
 }
 
 .paperTearImage {
@@ -45,7 +50,6 @@
 	top: -10px;
 }
 
-
 .widePaperTearImage {
 	width: 100%;
 	height: 40px;
@@ -54,23 +58,22 @@
 }
 
 .readerTextContainer {
-	flex: .875;
-    line-height: 1.6;
-    display: flex;
+	flex: 0.875;
+	line-height: 1.6;
+	display: flex;
 	flex-flow: column;
 	justify-content: space-around;
 	border-radius: 5px;
 }
 
-.wideReaderTextContainer { 
-	flex: .875;
-    line-height: 1.6;
-    display: flex;
+.wideReaderTextContainer {
+	flex: 0.875;
+	line-height: 1.6;
+	display: flex;
 	flex-flow: column;
 	justify-content: space-around;
 	margin-top: -50px;
 	border-radius: 5px;
-
 }
 
 .textParagraph {
@@ -86,4 +89,3 @@
 	padding: 10px;
 	height: 40px;
 }
-
