--- a/client/src/StudentDashboard/overlays/CountdownOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/CountdownOverlay/styles.css
@@ -25,6 +25,13 @@
 	box-shadow: 0px 0px 10px 2px #5b5b5b;
 	position: relative;
 	top: 10px;
+
+	user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 .countdownTitle {
@@ -32,10 +39,24 @@
 	font-size: 1.4em;
 	font-family: Proximanova;
 	font-weight: bold;
+
+	user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 .countdownNumber {
 	font-size: 6.5em;
 	margin-bottom: 20px;
 	font-weight: bold;
+
+	user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
