--- a/client/src/StudentDashboard/overlays/SubmittedOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/SubmittedOverlay/styles.css
@@ -1,6 +1,5 @@
-
 .submittedContainer {
-	background-color: black;
+	background-color: #0c202c;
 	color: white;
 	display: flex;
 	justify-content: center;
@@ -15,7 +14,6 @@
 	left: 0;
 	bottom: 0;
 	z-index: 3333;
-	
 }
 
 .submittedImage {
@@ -23,13 +21,31 @@
 	height: 300px;
 	margin: 50px;
 	background-color: transparent;
+
+	user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 .title {
-	font-size: 1.9em;
+	font-size: 4.5em;
 }
 
 .subtitle {
-	font-size: 1.5em;
-	font-style: italic;
+	font-size: 2em;
+	font-family: "ProximaNova Semibold";
+}
+
+.readupLogo {
+	position: absolute;
+	top: 30px;
+	left: 50px;
+
+	font-size: 1.8em;
+	font-family: "Proximanova Semibold";
+	z-index: 999999;
+	color: white;
 }
