--- a/client/src/StudentDashboard/modals/CompModal/styles.css
+++ b/client/src/StudentDashboard/modals/CompModal/styles.css
@@ -1,37 +1,34 @@
 .compRecordButton {
-  box-shadow: 0 2px 3px 0 rgba(0,0,0,.275);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.275);
 }
 
-.compModal{
+.compModal {
   margin-top: 100px;
 }
 
 .compModalHeader {
-    background-color: #f5f5f5;
-    border-color: #ddd;
-    color: #565656;
-    background-color: #f5f5f5;
-    border-color: #ddd;
-    padding: 40px 55px;
-    display: flex;
-    justify-content: center;
-    border-radius: 4px;
-    flex-flow: column;
-
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  color: #565656;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  padding: 40px 55px;
+  display: flex;
+  justify-content: center;
+  border-radius: 4px;
+  flex-flow: column;
 }
 
 .compModalHeader h4 {
-    text-align: center;
-    line-height: 1.75;
-    font-family: 'ProximaNova SemiBold';
+  text-align: center;
+  line-height: 1.75;
+  font-family: "ProximaNova SemiBold";
 }
 
 .compModalHeader h4.compSubTitle {
-  font-family: 'ProximaNova';
+  font-family: "ProximaNova";
   font-weight: 100;
-
 }
-
 
 .compModalBody {
   display: flex;
@@ -39,4 +36,7 @@
   padding: 45px 0px 30px;
 }
 
-
+.footerButtonContainer {
+  display: flex;
+  justify-content: space-evenly;
+}
