nice dropshadow in filter

--- a/client/src/StudentDashboard/components/BackArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/BackArrowButton/styles.css
@@ -27,8 +27,9 @@
 
 .arrowButtonContainer:hover {
 	transform: translateY(-3px);
-	box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
-	filter: brightness(120%);
+	/*	box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+*/
+	filter: brightness(120%) drop-shadow(0px 7px 14px rgba(50, 50, 93, 0.1));
 	transition: all 0.3s;
 }
 
