--- a/client/src/StudentDashboard/modals/CompModal/styles.css
+++ b/client/src/StudentDashboard/modals/CompModal/styles.css
@@ -36,7 +36,60 @@
   padding: 45px 0px 30px;
 }
 
+.writtenCompModalBody {
+  display: flex;
+  justify-content: flex-end;
+  padding: 5px 0px 30px;
+}
+
+.answerForm {
+  height: 120px;
+}
+
 .footerButtonContainer {
   display: flex;
   justify-content: space-evenly;
+}
+
+.studentResponse {
+  font-family: "Comic Neue Angular";
+  color: #4a4a4a;
+}
+
+.notes {
+  height: 160px;
+  width: 90%;
+  margin: 0 auto;
+
+  background-image: -webkit-linear-gradient(left, white 10px, transparent 10px),
+    -webkit-linear-gradient(right, white 10px, transparent 10px),
+    -webkit-linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+  background-image: -moz-linear-gradient(left, white 10px, transparent 10px),
+    -moz-linear-gradient(right, white 10px, transparent 10px),
+    -moz-linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+  background-image: -ms-linear-gradient(left, white 10px, transparent 10px),
+    -ms-linear-gradient(right, white 10px, transparent 10px),
+    -ms-linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+  background-image: -o-linear-gradient(left, white 10px, transparent 10px),
+    -o-linear-gradient(right, white 10px, transparent 10px),
+    -o-linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+  background-image: linear-gradient(left, white 10px, transparent 10px),
+    linear-gradient(right, white 10px, transparent 10px),
+    linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+  background-size: 100% 100%, 100% 100%, 100% 31px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  /*  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+*/
+  line-height: 31px;
+  font-family: "Comic Neue Angular", sans-serif;
+  color: #4a4a4a;
+  font-size: 19px;
+  padding: 8px;
+
+  border: none;
+}
+
+.notes:focus {
+  outline: none;
 }
