--- a/client/src/StudentDashboard/modals/CompModal/styles.css
+++ b/client/src/StudentDashboard/modals/CompModal/styles.css
@@ -1,3 +1,10 @@
+.progress {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  opacity: 0.8;
+}
+
 .compRecordButton {
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.275);
 }
