--- a/client/src/StudentDashboard/overlays/PermissionsOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/PermissionsOverlay/styles.css
@@ -13,25 +13,27 @@
 }
 
 @keyframes upAndDown {
-    0% { top: 120px; }
-    100% { top: 140px; }
+	0% {
+		top: 130px;
+	}
+	100% {
+		top: 150px;
+	}
 }
 
 .upArrow {
 	position: fixed;
-	top: 120px;
-	left: 318px;
+	left: 354px;
 	width: 60px;
 	animation: upAndDown 1s infinite alternate;
 }
 
 .reloadHelper {
-    position: fixed;
-    top: 70px;
-    left: 228px;
-    color: white;
-    font-family: 'ProximaNova Semibold';
-    font-size: 14px;
-    cursor: pointer;
-
+	position: fixed;
+	top: 70px;
+	left: 228px;
+	color: white;
+	font-family: "ProximaNova Semibold";
+	font-size: 14px;
+	cursor: pointer;
 }
