remove tempting arrow to press

--- a/client/src/StudentDashboard/components/AvatarContainer/styles.css
+++ b/client/src/StudentDashboard/components/AvatarContainer/styles.css
@@ -27,4 +27,8 @@
 	justify-content: space-evenly;
 
 	position: relative;
+
+	-webkit-box-shadow: inset 10px -40px 123px -51px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: inset 10px -40px 123px -51px rgba(0, 0, 0, 0.75);
+	box-shadow: inset 10px -40px 123px -51px rgba(0, 0, 0, 0.75);
 }
