col approach failed

--- a/client/src/sharedComponents/AssignBooks/styles.css
+++ b/client/src/sharedComponents/AssignBooks/styles.css
@@ -23,6 +23,9 @@
 
 .body {
 	background-color: #fbfbfb;
+	box-shadow: inset 0px -40px 30px -51px rgba(0, 0, 0, 0.55);
+	height: 250px;
+	overflow-y: scroll;
 }
 
 .roster {
