--- a/client/src/sharedComponents/AssignBooks/styles.css
+++ b/client/src/sharedComponents/AssignBooks/styles.css
@@ -18,13 +18,14 @@
 }*/
 
 .rowElt {
-	margin: 20px 0px;
+	margin: 10px 0px;
 }
 
 .body {
 	background-color: #fbfbfb;
 	box-shadow: inset 0px -40px 30px -51px rgba(0, 0, 0, 0.55);
-	height: 250px;
+	min-height: 250px;
+	height: 48vh;
 	overflow-y: scroll;
 	padding: 0px 15px;
 }
@@ -38,10 +39,20 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: 15px;
+
+	flex-flow: column;
+	display: flex;
+	justify-content: center;
 }
 
 .bookElt {
 	width: 25%;
+	/*
+	flex-flow: column;
+	display: flex;
+	justify-content: center;
+	height: 27px;
+*/
 }
 
 .levelElt {
@@ -58,6 +69,14 @@
 
 .myDrop button {
 	font-family: "ProximaNova semibold";
+}
+
+.myDrop {
+	/*	flex-flow: column;
+	display: flex;
+	justify-content: center;
+	height: 27px;
+*/
 }
 
 .goodMetric button {
