--- a/client/src/sharedComponents/Name/styles.css
+++ b/client/src/sharedComponents/Name/styles.css
@@ -6,12 +6,17 @@
 	margin-bottom: 25px;
 }
 
-.myLabel .control-label {
+.myLabel label {
 	margin-left: 10%;
 	margin-bottom: 0px;
 	margin-top: 7px;
 	color: #505050;
 	font-family: "proximanova semibold";
+}
+
+.title {
+	text-align: center;
+	padding: 4px 0px;
 }
 
 @media (min-width: 768px) {
