allow teachers to demo

--- a/client/src/StudentDashboard/components/Avatar/styles.css
+++ b/client/src/StudentDashboard/components/Avatar/styles.css
@@ -121,6 +121,12 @@
 	color: white;
 }
 
+.tryDemo {
+	font-size: 15px;
+	font-family: "proximanova";
+	font-style: italic;
+}
+
 .initials {
 	position: relative;
 	top: -50px;
