--- a/app/views/homepage/privacy_policy.erb
+++ b/app/views/homepage/privacy_policy.erb
@@ -62,7 +62,7 @@
 <h1> Our Promise</h1>
 <p>
 
-ReadUp let's teachers more easily assess literacy, and we only use student information to do that. We take privacy very seriously: ReadUp strictly adheres to <span>FERPA</span> and <span>COPPA</span> student privacy guidelines.</p>
+ReadUp lets teachers more easily assess literacy, and we only use student information to do that. We take privacy very seriously: ReadUp strictly adheres to <span>FERPA</span> and <span>COPPA</span> student privacy guidelines.</p>
 
 <p>
 We will never share any student and parent information with third-parties or marketing groups. Additionally, schools own and safeguard all personally-identifiable data. To learn the details of our policy, you can read it in full, below.
@@ -91,7 +91,7 @@ Your privacy is very important to us. This policy tells you how your personal in
 
 
 <p>
-ReadUp is a messaging platform that helps educators message books to any phone. Due to our commitment to protect the privacy of children, ReadUp’s website and apps have been reviewed and approved for having policies and practices surrounding the collection, use maintenance and disclosure of personal information from children consistent with FERPA and COPPA guidelines. If you have questions or complaints regarding our privacy policy or practices, please contact us at privacy@readupnow.com.
+ReadUp is a tool that helps educators assess literacy. Due to our commitment to protect the privacy of children, ReadUp’s website and apps have been reviewed and approved for having policies and practices surrounding the collection, use maintenance and disclosure of personal information from children consistent with FERPA and COPPA guidelines. If you have questions or complaints regarding our privacy policy or practices, please contact us at privacy@readupnow.com.
 </p>
 
 <h3>WHAT THIS IS SAYING</h3>
@@ -119,7 +119,7 @@ You are responsible for any Content you provide in connection with the Services.
 
 
 
-<p>ReadUp is a tool to help you communicate with people who can support your education, and we take your privacy seriously. Maintaining the privacy of your Personal Information is a shared responsibility, and while we will limit what we ask for and what we do with your information, we encourage you not to share it unless you need to. Please keep in mind that you are responsible for the content of your account and all your messages. To delete your account, contact us at contact@readupnow.com, but note ReadUp is not responsible for what other ReadUp users may do with your sent messages.</p>
+<p>ReadUp is a tool to help educators assess literacy, and we take your privacy seriously. Maintaining the privacy of your Personal Information is a shared responsibility, and while we will limit what we ask for and what we do with your information, we encourage you not to share it unless you need to. Please keep in mind that you are responsible for the content of your account and all your messages. To delete your account, contact us at contact@readupnow.com, but note ReadUp is not responsible for what other ReadUp users may do with your sent messages.</p>
 
 <div class="divider" style="margin-bottom:32px;"><div></div></div>
 <div class="divider" style="margin-bottom:32px;" id="divider-mobile"><div></div></div>
@@ -157,7 +157,7 @@ You are responsible for any Content you provide in connection with the Services.
 
 <h1>What information does ReadUp display or collect?</h1>
 
-<p>When you use the Services, you may set up your personal profile, send messages, perform searches and queries, and transmit information through various channels as permitted by the functionality of the Services. ReadUp will not display your personal contact information to other users without your permission. The information we gather from users enables us to verify user identity, allows our users to set up a user account and profile through the Services, and helps us personalize and improve our Services. We retain this information to provide the Services to you and our other users and to provide a useful user experience. When you update your information, we usually keep a backup copy of the prior version for a reasonable period of time in case you need to need to go back to that version.</p>
+<p>When you use the Services, you may set up your personal profile, perform searches and queries, and transmit information through various channels as permitted by the functionality of the Services. ReadUp will not display your personal contact information to other users without your permission. The information we gather from users enables us to verify user identity, allows our users to set up a user account and profile through the Services, and helps us personalize and improve our Services. We retain this information to provide the Services to you and our other users and to provide a useful user experience. When you update your information, we usually keep a backup copy of the prior version for a reasonable period of time in case you need to need to go back to that version.</p>
 
 <h3>WHAT THIS IS SAYING</h3>
 
