--- a/client/src/sharedComponents/AddClass/styles.css
+++ b/client/src/sharedComponents/AddClass/styles.css
@@ -39,7 +39,7 @@
 	position: relative;
 	top: -16px;
 	background-color: #e5f6fd;
-	color: #00adf2;
+	color: #378bad;
 	border: 1px solid #dbdbdbb5;
 	font-family: "proximanova semibold";
 	border-radius: 2px;
