responsive progress bar

--- a/app/views/layouts/signup.erb
+++ b/app/views/layouts/signup.erb
@@ -3,7 +3,7 @@
   <head>
 
 
-    <title>ReadUp | Add Your Class</title>
+    <title>ReadUp for Teachers</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
