--- a/client/src/StudentDashboard/components/AvatarContainer/styles.css
+++ b/client/src/StudentDashboard/components/AvatarContainer/styles.css
@@ -1,3 +1,12 @@
+.teacherContainer {
+	display: flex;
+	justify-content: center;
+}
+
+.teacherAvatar {
+	width: 250px;
+}
+
 .circle {
 	width: 100px;
 	height: 100px;
