--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -16,13 +16,22 @@ body {
 .contentContainer {
 	display: flex;
 	width: 100%;
-	/*height: 100%;*/
 	flex: 1;
 	background-color: #0c1f2c;
 	z-index: 1;
 	justify-content: space-around;
 	align-items: center;
 	overflow-y: hidden;
+}
+
+.contentContainerAvatars {
+	display: flex;
+	width: 100%;
+	flex: 1;
+	background-color: #0c1f2c;
+	z-index: 1;
+	align-items: baseline;
+	overflow-y: scroll;
 }
 
 .spellingContentContainer {
@@ -301,4 +310,3 @@ body {
 	filter: brightness(124%);
 	transition: all 0.3s;
 }
-
