added the overlay for sound not working

--- a/client/src/StudentDashboard/overlays/DisabledSTEPOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/DisabledSTEPOverlay/styles.css
@@ -1,4 +1,3 @@
-
 .micContainer {
 	position: absolute;
 	top: 0;
@@ -6,7 +5,7 @@
 	left: 0;
 	bottom: 0;
 	background-color: black;
-	opacity: 1.0;
+	opacity: 1;
 	display: flex;
 	flex-flow: column;
 	justify-content: center;
@@ -22,22 +21,28 @@
 	left: 50px;
 
 	font-size: 1.8em;
-	font-family: 'Proximanova Semibold';
+	font-family: "Proximanova Semibold";
+}
+
+.handRaise {
+	display: block;
+	width: 210px;
+	margin-bottom: 60px;
 }
 
 .micHeader {
 	font-size: 2.3em;
-	font-family: 'Proximanova Semibold';
+	font-family: "Proximanova Semibold";
 }
 
 .micList {
 	margin-top: 30px;
 	width: 550px;
-	font-family: 'Proximanova';
+	font-family: "Proximanova";
 }
 
 .number {
-	font-family: 'Proximanova Semibold';
+	font-family: "Proximanova Semibold";
 }
 
 .micStep {
